--- a/src/components/input/_input.scss
+++ b/src/components/input/_input.scss
@@ -1,10 +1,10 @@
 .todoForm {
     display: block;
-    padding: 1.25rem;
+    padding: 1rem 1.5rem;
     background: var(--blue800-ds);
     display: flex;
     align-items: center;
-    gap: 1.5rem;
+    gap: 2rem;
     margin-bottom: 1.5rem;
     border-radius: 5px;
     box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.3);
