--- a/src/scss/index.css
+++ b/src/scss/index.css
@@ -96,7 +96,7 @@ button {
 
 .todoForm {
   display: block;
-  padding: 1.25rem;
+  padding: 1rem 1.5rem;
   background: var(--blue800-ds);
   display: -webkit-box;
   display: -ms-flexbox;
@@ -104,7 +104,7 @@ button {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  gap: 1.5rem;
+  gap: 2rem;
   margin-bottom: 1.5rem;
   border-radius: 5px;
   -webkit-box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.3);
@@ -158,13 +158,14 @@ button {
       -ms-flex-align: center;
           align-items: center;
   background: var(--blue800-ds);
-  padding: 1.25rem;
-  gap: 1.5rem;
+  padding: 1rem 1.5rem;
+  gap: 2rem;
   color: var(--gray-blue400);
   max-height: 4rem;
   position: relative;
   cursor: -webkit-grab;
   cursor: grab;
+  margin-bottom: 1px;
 }
 
 .todo:first-child {
@@ -239,14 +240,6 @@ button {
 }
 
 .todos {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  gap: 1px;
   background: var(--gray-blue800-2);
   -webkit-box-shadow: 30px 30px 80px rgba(0, 0, 0, 0.1);
           box-shadow: 30px 30px 80px rgba(0, 0, 0, 0.1);
@@ -325,7 +318,7 @@ button {
 }
 
 .header {
-  margin-bottom: 2rem;
+  margin-bottom: 1.5rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -338,7 +331,7 @@ button {
 }
 
 .header__title {
-  font-size: 2rem;
+  font-size: 2.5rem;
   color: var(--gray-blue400-hover);
   letter-spacing: 0.5em;
 }
