--- a/src/scss/index.css
+++ b/src/scss/index.css
@@ -165,7 +165,7 @@ button {
   position: relative;
   cursor: -webkit-grab;
   cursor: grab;
-  margin-bottom: 1px;
+  border-bottom: 1px solid var(--gray-blue800-2);
 }
 
 .todo:first-child {
@@ -240,10 +240,9 @@ button {
 }
 
 .todos {
-  background: var(--gray-blue800-2);
   -webkit-box-shadow: 30px 30px 80px rgba(0, 0, 0, 0.1);
           box-shadow: 30px 30px 80px rgba(0, 0, 0, 0.1);
-  border-radius: 5px;
+  background: var(--blue800-ds);
 }
 
 .todos__empty {
