body overlow,new Footer btn comp

--- a/src/components/footer/_footer.scss
+++ b/src/components/footer/_footer.scss
@@ -20,6 +20,7 @@
     button {
         color: inherit;
         cursor: pointer;
+        text-transform: capitalize;
     }
 
     button:not(.active):hover {
