--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,10 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
+body::-webkit-scrollbar {
+    display: none;
+}
+
 .app {
     background: var(--blue800);
     min-height: 100vh;
